<resources>
    <string name="app_name">EletricCarApp</string>
    <string name="Title">Eletric Car</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potência</string>
    <string name="recarga">Recarga</string>
    <string name="preco_do_kwh">Preço do KWh</string>
    <string name="km_percorrido">Km percorrido</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string name="no_internet">Ops! Internet não disponivel</string>
    <string name="response_error">Algo deu errado. por favor tente novamente mais tarde</string>
    <string name="saved_calc">result_key</string>


</resources>