<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/calcular_autonomia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_close" />

    <EditText
        android:id="@+id/et_preço_kwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/preco_do_kwh"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/et_preço_kwh"
        app:layout_constraintStart_toStartOf="@id/et_preço_kwh"
        app:layout_constraintEnd_toEndOf="@id/et_preço_kwh"
        android:hint="@string/km_percorrido"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Calcular"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
        app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
        app:layout_constraintEnd_toEndOf="@id/et_km_percorrido"
        />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/btn_calcular"
        />


</androidx.constraintlayout.widget.ConstraintLayout>