<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_container_car"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"

            >
            
            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_star"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/iv_carro"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:src="@drawable/carro_eletrico"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_preco"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/preco"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/iv_carro"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_preco_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 300.000,00"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@id/iv_carro"
                app:layout_constraintStart_toEndOf="@id/tv_preco"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/tv_bateria"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/bateria"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_preco"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_bateria_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="300 Kwh"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@id/tv_preco"
                app:layout_constraintStart_toEndOf="@id/tv_bateria"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/tv_potencia"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/potencia"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_potencia_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="300 cv"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria"
                app:layout_constraintStart_toEndOf="@id/tv_potencia"
                android:layout_marginStart="16dp"/>


            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/recarga"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_recarga_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30 min"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia"
                app:layout_constraintStart_toEndOf="@id/tv_recarga"
                android:layout_marginStart="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>